# gha-sandbox-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  codebook.toml  conanfile.txt  flake.nix  justfile
.github/workflows/: ci.yml
profiles/: detect
src/: main.cpp  math.cpp  math.hpp
tests/: test_math.cpp
